--- a/swing-note/src/scss/components/_readMsg.scss
+++ b/swing-note/src/scss/components/_readMsg.scss
@@ -10,6 +10,7 @@
     flex-wrap: wrap;
     position: relative;
 
+
     .date {
         font-family: $font-pt-sans;
         font-size: 12px;
@@ -39,7 +40,8 @@
         font-style: italic;
         margin-top: 1.5rem;
     }
-    .uppdate{
+
+    .uppdate {
         width: 100px;
         height: 35px;
         background-color: $btn-background-color;
@@ -50,11 +52,12 @@
         text-align: center;
         border-radius: 5px;
         border: 1px solid $btn-background-color;
-        position:absolute;
+        position: absolute;
         right: 15px;
         bottom: 30px;
     }
-    .delete{
+
+    .delete {
         width: 70px;
         height: 18px;
         font-size: 14px;
@@ -62,9 +65,37 @@
         line-height: 18.12px;
         color: $text-color;
         text-align: center;
-        position:absolute;
+        position: absolute;
         text-decoration: underline;
         right: 27px;
         bottom: 9px;
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    }
+}
+
+.searchDiv {
+    display: flex;
+    justify-content: center;
+
+    .search-input {
+        padding: 1em 1em 1em 1em;
+        display: flex;
+        flex-wrap: wrap;
+        text-align: left;
+        min-width: 380px;
+        height: 70px;
+        background-color: $textfield-background-color;
+        font-family: $font-pt-sans;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 18px;
+        margin-bottom: 1em;
+        border-radius: 5px;
+        border: none;
     }
 }
