--- a/swing-note/src/style.css
+++ b/swing-note/src/style.css
@@ -84,6 +84,33 @@ body {
   text-decoration: underline;
   right: 27px;
   bottom: 9px;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.searchDiv {
+  display: flex;
+  justify-content: center;
+}
+.searchDiv .search-input {
+  padding: 1em 1em 1em 1em;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: left;
+  min-width: 380px;
+  height: 70px;
+  background-color: white;
+  font-family: "PT sans", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 18px;
+  margin-bottom: 1em;
+  border-radius: 5px;
+  border: none;
 }
 
 body .post-icon {
