--- a/swing-note/src/scss/components/_readMsg.scss
+++ b/swing-note/src/scss/components/_readMsg.scss
@@ -1,5 +1,7 @@
 @import "../abstracts/colors";
 @import "../abstracts/fonts";
+@import "../mixin/mixin";
+
 
 .readDiv {
     background-color: $textfield-background-color;
@@ -10,33 +12,20 @@
     flex-wrap: wrap;
     position: relative;
 
-
     .date {
-        font-family: $font-pt-sans;
-        font-size: 12px;
-        font-weight: 400;
-        line-height: 18px;
-        color: $date-color;
+        @include design($font: $font-pt-sans, $fontSize: 12px, $fontWeight: 400, $lineHeight: 18px, $color: $date-color);
         margin-bottom: 1em;
     }
 
     .note {
-        font-family: $font-pt-sans;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 24px;
-        color: $text-color;
+        @include design($font: $font-pt-sans, $fontSize: 16px, $fontWeight: 400, $lineHeight: 24px, $color: $text-color);
         width: 350px;
         height: 90px;
         overflow-y: scroll;
     }
 
     .username {
-        font-family: $font-pt-sans;
-        font-size: 16px;
-        font-weight: 700;
-        line-height: 24px;
-        color: $text-color;
+        @include design($font: $font-pt-sans, $fontSize: 16px, $fontWeight: 700, $lineHeight: 24px, $color: $text-color);
         font-style: italic;
         margin-top: 1.5rem;
     }
@@ -45,10 +34,7 @@
         width: 100px;
         height: 35px;
         background-color: $btn-background-color;
-        font-size: 14px;
-        font-weight: 700;
-        line-height: 18.12px;
-        color: $text-color;
+        @include design($font: $font-pt-sans, $fontSize: 14px, $fontWeight: 700, $lineHeight: 18.12px, $color: $text-color);
         text-align: center;
         border-radius: 5px;
         border: 1px solid $btn-background-color;
@@ -60,10 +46,7 @@
     .delete {
         width: 70px;
         height: 18px;
-        font-size: 14px;
-        font-weight: 700;
-        line-height: 18.12px;
-        color: $text-color;
+        @include design($font: $font-pt-sans, $fontSize: 14px, $fontWeight: 700, $lineHeight: 18.12px, $color: $text-color);
         text-align: center;
         position: absolute;
         text-decoration: underline;
@@ -90,10 +73,7 @@
         min-width: 380px;
         height: 70px;
         background-color: $textfield-background-color;
-        font-family: $font-pt-sans;
-        font-size: 20px;
-        font-weight: 400;
-        line-height: 18px;
+        @include design($font: $font-pt-sans, $fontSize: 20px, $fontWeight: 400, $lineHeight: 18px, $color: $text-color);
         margin-bottom: 1em;
         border-radius: 5px;
         border: none;
