--- a/swing-note/src/scss/components/_writeMsg.scss
+++ b/swing-note/src/scss/components/_writeMsg.scss
@@ -1,5 +1,7 @@
 @import "../abstracts/colors";
 @import "../abstracts/fonts";
+@import "../mixin/mixin";
+
 
 .writeDiv {
     padding: 1em 1em 1em 1em;
@@ -14,10 +16,7 @@
         min-width: 380px;
         height: 70px;
         background-color: $textfield-background-color;
-        font-family: $font-pt-sans;
-        font-size: 20px;
-        font-weight: 400;
-        line-height: 18px;
+        @include design($font: $font-pt-sans, $fontSize: 20px, $fontWeight: 400, $lineHeight: 18px, $color: $text-color);
         margin-bottom: 1em;
         padding: 0 1rem 0 1rem;
         border-radius: 5px;
@@ -29,10 +28,7 @@
         min-width: 380px;
         height: 432px;
         background-color: $textfield-background-color;
-        font-family: $font-pt-sans;
-        font-size: 24px;
-        font-weight: 400;
-        line-height: 36px;
+        @include design($font: $font-pt-sans, $fontSize: 24px, $fontWeight: 400, $lineHeight: 36px, $color: $text-color);
         margin-bottom: 1em;
         padding: 1rem 1rem 1rem 1rem;
         resize: none;
@@ -42,10 +38,7 @@
         min-width: 380px;
         height: 70px;
         background-color: $textfield-background-color;
-        font-family: $font-pt-sans;
-        font-size: 20px;
-        font-weight: 400;
-        line-height: 18px;
+        @include design($font: $font-pt-sans, $fontSize: 20px, $fontWeight: 400, $lineHeight: 18px, $color: $text-color);
         margin-bottom: 1em;
         padding: 0 1rem 0 1rem;
         border-radius: 5px;
@@ -56,10 +49,7 @@
         min-width: 380px;
         height: 72px;
         background-color: $btn-background-color;
-        font-size: 14px;
-        font-weight: 700;
-        line-height: 18.12px;
-        color: $text-color;
+        @include design($font: $font-pt-sans, $fontSize: 14px, $fontWeight: 700, $lineHeight: 18.12px, $color: $text-color);
         text-align: center;
         border-radius: 5px;
         border: 1px solid $btn-background-color;
