--- a/swing-note/src/style.css
+++ b/swing-note/src/style.css
@@ -2,6 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Righteous&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Righteous&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Righteous&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Righteous&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Righteous&display=swap");
 *,
 *::after,
 *::before {
@@ -61,6 +63,7 @@ body {
   width: 100px;
   height: 35px;
   background-color: #EF4343;
+  font-family: "PT sans", sans-serif;
   font-size: 14px;
   font-weight: 700;
   line-height: 18.12px;
@@ -75,6 +78,7 @@ body {
 .readDiv .delete {
   width: 70px;
   height: 18px;
+  font-family: "PT sans", sans-serif;
   font-size: 14px;
   font-weight: 700;
   line-height: 18.12px;
@@ -108,6 +112,7 @@ body {
   font-size: 20px;
   font-weight: 400;
   line-height: 18px;
+  color: black;
   margin-bottom: 1em;
   border-radius: 5px;
   border: none;
@@ -137,6 +142,7 @@ body .post-icon {
   font-size: 20px;
   font-weight: 400;
   line-height: 18px;
+  color: black;
   margin-bottom: 1em;
   padding: 0 1rem 0 1rem;
   border-radius: 5px;
@@ -152,6 +158,7 @@ body .post-icon {
   font-size: 24px;
   font-weight: 400;
   line-height: 36px;
+  color: black;
   margin-bottom: 1em;
   padding: 1rem 1rem 1rem 1rem;
   resize: none;
@@ -164,6 +171,7 @@ body .post-icon {
   font-size: 20px;
   font-weight: 400;
   line-height: 18px;
+  color: black;
   margin-bottom: 1em;
   padding: 0 1rem 0 1rem;
   border-radius: 5px;
@@ -173,6 +181,7 @@ body .post-icon {
   min-width: 380px;
   height: 72px;
   background-color: #EF4343;
+  font-family: "PT sans", sans-serif;
   font-size: 14px;
   font-weight: 700;
   line-height: 18.12px;
