--- a/swing-note/src/scss/components/_readMsg.scss
+++ b/swing-note/src/scss/components/_readMsg.scss
@@ -64,6 +64,7 @@
 .searchDiv {
     display: flex;
     justify-content: center;
+    gap: 2rem;
 
     .search-input {
         padding: 1em 1em 1em 1em;
@@ -77,5 +78,17 @@
         margin-bottom: 1em;
         border-radius: 5px;
         border: none;
+    }
+
+    .search-btn{
+        width: fit-content;
+        height: 70px;
+        padding: 0px 20px;
+        background-color: $btn-background-color;
+        @include design($font: $font-pt-sans, $fontSize: 20px, $fontWeight: 400, $lineHeight: 18.12px, $color: $text-color);
+        text-align: center;
+        border-radius: 5px;
+        border: 1px solid $btn-background-color;
+        color: white;
     }
 }
